syntax = "proto3";
package prismfinance.prismcore.pgov;

import "cosmos/gov/v1/gov.proto";
import "gogoproto/gogo.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/prism-finance/prism-core/x/pgov/types";

message Proposal {
  uint64 proposal_id = 1;
  string asset = 2;
  google.protobuf.Timestamp start_time = 3 [
    (gogoproto.stdtime) = true,
    (gogoproto.nullable) = true
  ];
  google.protobuf.Timestamp end_time = 4 [
    (gogoproto.stdtime) = true,
    (gogoproto.nullable) = false
  ];
  repeated cosmos.gov.v1.WeightedVoteOption final_vote = 5 [(gogoproto.nullable) = false];
  bool result_submit_failure = 6;
}